- updated swagger - added some endpoints.
