# app/controllers/CategoryController.js
@@ -3,7 +3,7 @@ var bodyParser = require("body-parser")
 
 var router = express.Router()
 
-router.use(bodyParser.urlencoded({ extended: true }))
+router.use(bodyParser.json())
 
 var Category = require("../models/Category")
 
@@ -38,6 +38,14 @@ router.post("/", function(req, res) {
 		if (err)
 			return res.status(500).send("Error while adding the category:" + err)
 		res.status(200).send(category)
+	})
+})
+
+router.delete("/:id", function(req, res) {
+	Category.findByIdAndRemove(req.params.id, function(err, category) {
+		if (err) 
+			return res.status(500).send("There was a problem deleting the category.")
+		res.status(200).send("Category "+ category.name +" was deleted.")
 	})
 })
 
